--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,11 @@
     <div class="col-12">
       <div class="page-title-box d-flex">
         <h4 class="page-title">Dashboard</h4>
+        {% if user.role != "Student" %}
         <div class="ml-auto mt-3">
           <a href="{{url_for('new')}}" class="btn btn-warning">Add New</a>
         </div>
+        {%endif%}
       </div>
     </div>
   </div>
@@ -17,7 +19,6 @@
         <table class="table table-centered mb-0">
           <thead class="thead-light">
             <tr>
-              <th>Action</th>
               <th>Name</th>
               <th>Items</th>
               <th>Date</th>
@@ -27,20 +28,12 @@
               <th>Fees Status</th>
               <th>Return Date</th>
               <th>Return To</th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
             {% for r in recivers %}
             <tr>
-              <td>
-                <div class="d-flex">
-                  <div>
-                <a
-                  href="{{url_for('edit', id=r.id)}}"
-                  class="dripicons-pencil btn btn-sm btn-warning"
-                ></a></div>
-                </div>
-              </td>
               <td>{{r.name}}</td>
               <td>{{r.items}}</td>
               <td>{{r.date}}</td>
@@ -54,6 +47,25 @@
               {%endif%}
               <td>{{r.return_date}}</td>
               <td>{{r.return_to}}</td>
+              {% if user.role != "Student" %}
+              <td>
+                <div class="d-flex">
+                  <div>
+                <a
+                  href="{{url_for('edit', id=r.id)}}"
+                  class="dripicons-pencil btn btn-sm btn-warning"
+                ></a></div>
+                {% if user.role in ["Admin", "Founder", "Co-Founder", "Innovator"]%}
+                <div>
+                  <a
+                    href="{{url_for('delete', id=r.id)}}"
+                    onclick="return confirm('Are You Sure?');"
+                    class="dripicons-trash btn btn-sm btn-danger ml-1"
+                  ></a></div>
+                </div>
+                {%endif%}
+              </td>
+            {%endif%}
             </tr>
             {%endfor%}
           </tbody>
